TEZ-3487. Improvements in travis yml file to get builds to work. (Darion Yaphet via hitesh)